# kirpi

./: README.md  pyproject.toml  setup.py
src/kirpi/: __init__.py  base.py  cli.py  config.py  types.py  utils.py
